kubernetes/backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: forge-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: IMAGE
        imagePullPolicy: IfNotPresent
        name: backend
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "100m"
        tty: true
        volumeMounts:
        - mountPath: /uploads
          name: backend-volume-claim
        ports:
        - containerPort: 8000
      restartPolicy: Always
      serviceAccountName: ""
      imagePullSecrets:
       - name: registry-credentials
      volumes:
      - name: backend-volume-claim
        persistentVolumeClaim:
          claimName: backend-volume-claim
status: {}

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: forge-backend
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - http:
  - host: api.forge.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: backend
          servicePort: 8000
  tls:
  - hosts:
    - api.forge.ch
    secretName: bag-tls
